# 2018_fall_image_processing_final_api_segmenter

./: .gitmodules  CMakeLists.txt  README.org
include/api/: segmenter.hpp
include/api/segmenter/: cimg_bridge.hpp  cv_bridge.hpp  cv_cimg_bridge.hpp  segmenter_cimg.hpp  segmenter_std.hpp
output/benchmark/: bk.csv  bk1.csv  bk10.csv  bk11.csv  bk12.csv  bk13.csv  bk14.csv  bk15.csv  bk16.csv  bk17.csv  bk18.csv  bk19.csv  bk2.csv  bk20.csv  bk21.csv  bk22.csv  bk23.csv  bk3.csv  bk4.csv  bk5.csv  bk6.csv  bk7.csv  bk8.csv  bk9.csv
output/keypoints/: std_keypoint8.csv
script/: benchmark.sh
src/: segment.cpp
test/: test_api_segmenter_cimg_bridge.cpp  test_api_segmenter_cv_bridge.cpp  test_api_segmenter_segmenter_cimg.cpp
